Add JavaFX UI integration